# SudokuSolverC

./: CMakeLists.txt  README.md
ejemplos_sudokus/: sudokus_ejemplos.txt
src/: main.c  solver.c  solver.h  sudoku_utils.c  sudoku_utils.h
tests/: benchmark.py  sudokus_test.txt  test_correctness.py  utils.py
